#2158 added shipyard controller
